<resources>
    <string name="app_name">Maxfiy raqamni aniqlash</string>
    <string name="sayt_orqali_aniqlash">SAYT ORQALI ANIQLASH</string>
    <string name="ilova_orqali_aniqlash">ILOVA ORQALI ANIQLASH</string>
    <string name="maxfiy_raqam_aniqlashni_o_rganish">MAXFIY RAQAMLARNI ANIQLASHNI O\'RGANISH</string>
    <string name="video_orqali_o_rganish">VIDEO ORQALI O\'RGANISH</string>
    <string name="maxfiy_raqamni_aniqlash">MAXFIY RAQAMLARNI ANIQLASH</string>
    <string name="net_nomer">NOMA\'LUM RAQAM</string>
    <string name="maxfiy_raqamni_aniqlaymiz">MAXFIY RAQAMLARNI ANIQLAYMIZ</string>
    <string name="ilovani_baholash">Ilovani baholash</string>
    <string name="ilovani_ulashish">Ilovani ulashish</string>
    <string name="ilova_haqida">Ilova haqida</string>
    <string name="bizga_qo_shiling">Bizga qo\'shiling!</string>
    <string name="youtube">YouTube</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="tiktok">TikTok</string>
    <string name="chiqish">Chiqish</string>
    <string name="dialog_uchun">Maxfiy Raqamni Aniqlash ilovasi maxfiy raqamlarni aniqlashda yordam beradi.
        Ilovadan qanday foydalanishni bilmasangiz, avval foydalanishni o\'rganib oling!</string>
    <string name="yopish">Yopish</string>
    <string name="baholash">Baholash</string>
    <string name="hello_blank_fragment">Bo\'sh fragment</string>
    <string name="navigation_open">Navigatsiya panelini ochish</string>
    <string name="navigation_close">Navigatsiya panelini yopish</string>
    <string name="toolbar_more">Qo\'shimcha amallar</string>
    <string name="logo">Logotip</string>
    <string name="rate_dialog_title">Ilovani baholang</string>
    <string name="rate_dialog_message">Agar ilova sizga yoqqan bo\'lsa, iltimos, uni baholang.</string>
    <string name="rate_dialog_ok">Baholash</string>
    <string name="rate_dialog_cancel">Keyinroq eslatish</string>
    <string name="rate_dialog_no">Yo\'q</string>

    <string name="about_title">Ilova haqida</string>
    <string name="about_description">Bu ilova orqali siz Maxfiy raqamdan kelgan qo\'ng\'iroqning raqamini aniqlashingiz mumkin bo\'ladi!\nDasturchi: Shahzod Ro\'zimboyev</string>
    <string name="exit_title">Ilovadan chiqish!</string>
    <string name="exit_message">Siz haqiqatdan ham ilovadan chiqmoqchimisiz?</string>
    <string name="cancel">Bekor qilish</string>
    <string name="ucell_no_app">Hozircha UCellda ilova orqali aniqlash mumkin emas!!!</string>
    <string name="mobiuz_no_app">Hozircha MobiUzda ilova orqali aniqlash mumkin emas!!!</string>
    <string name="share_text">Maxfiy raqamni aniqlash</string>
</resources>
