<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group >
        <item
            android:id="@+id/nav_baholash"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/ilovani_baholash" />
        <item
            android:id="@+id/nav_ulashish"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/ilovani_ulashish" />
        <item
            android:id="@+id/nav_haqida"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/ilova_haqida" />
    </group>

    <item android:title="@string/bizga_qo_shiling">
        <menu>
            <item
                android:id="@+id/menu_youtube"
                android:icon="@drawable/youtube"
                android:title="@string/youtube" />
            <item
                android:id="@+id/menu_telegram"
                android:icon="@drawable/telegra"
                android:title="@string/telegram" />
            <item
                android:id="@+id/menu_instagram"
                android:icon="@drawable/instag"
                android:title="@string/instagram" />
            <item
                android:id="@+id/menu_tiktok"
                android:icon="@drawable/ic_tiktok"
                android:title="@string/tiktok" />
        </menu>
    </item>

</menu>