<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobiuzActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mobiuz_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/uz_card_id"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#0FA6F6"
                app:shapeAppearanceOverlay="@style/CircleShape">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/mobiuz" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/uz_card_id"
                android:layout_marginTop="20dp"
                android:background="@color/mobiuz_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/maxfiy_raqamni_aniqlash"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:id="@+id/sayt_orqali_mobiuz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="70dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/mobiuz_color" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/chrome" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="100dp"
                            android:text="@string/sayt_orqali_aniqlash"
                            android:textAllCaps="true"
                            android:textColor="@color/mobiuz_color"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:id="@+id/ilova_orqali_mobiuz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/googleplayicon" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="70dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/mobiuz_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="100dp"
                            android:text="@string/ilova_orqali_aniqlash"
                            android:textAllCaps="true"
                            android:textColor="@color/mobiuz_color"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:text="@string/maxfiy_raqam_aniqlashni_o_rganish"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:id="@+id/video_orqali_mobiuz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/youtube" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="70dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/mobiuz_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="100dp"
                            android:text="@string/video_orqali_o_rganish"
                            android:textAllCaps="true"
                            android:textColor="@color/mobiuz_color"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>